<resources>
    <color name="redbackground">#e5222c</color>
    <color name="boldtext">#000000</color>
    <color name="greyline">#4B4B4B</color>
    <string name="app_name">Day003.ContactCard</string>
    <string name="hello">Hello</string>
    <string name="developer_desc">Android Dev</string>
    <string name="myName">Robert Jr.</string>
    <string name="i_m">I\'m</string>
    <!--<string name="column_text">AGE \nADDRESS\n E-MAIL\n PHONE\n FREELANCE</string>-->
    <string name="info">41 \n PO BOX 250082 LR, AR 72225 \n davidazimmerly@gmail.com \n (541)654–3745 \n till April 25, 2019</string>
    <string name="red_bottom_border">red bottom border</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="profile_image">profile image</string>
    <string name="linkedin">Linkedin</string>
    <string name="google_plus">Google Plus</string>
    <string name="instagram">Instagram</string>
    <string name="basketball">Basketball!</string>
    <string name="hello_speech_bubble">Hello Speech Bubble</string>
    <string name="pick_date">Choose Freelance Date</string>
    <string name="enter_info">Enter Info</string>
    <string name="name">Name</string>
    <string name="occupation">Occupation</string>
    <string name="age">Age</string>
    <string name="street_address">Street Address</string>
    <string name="city_name">City Name</string>
    <string name="zip_code">Zip Code</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="defaultDate">01/01/1992</string>
    <string name="dateFormat">%1$d/%2$d/%3$d</string>
    <string name="freeLanceDate">till %1$s/%2$s/%3$s</string>
    <string name="fullAddress">%1$s, %2$s, %3$s</string>
</resources>
